--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <main>
         <button id="playButton">再生</button>
         <audio id="audioPlayer" src="yukichant.mp3"></audio>
+        <button id="bunPayButton" onclick="window.location.href='https://bun-pay-h4zvmysbc6tqvm7jau9fzn.streamlit.app/'">
+            F1ファンのための新通貨：Bun-Pay
+        </button>
     </main>
     <footer>
         <p>© 2024 つのだちゃんといっしょ</p>
@@ -20,4 +23,5 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
