--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>つのだちゃんといっしょ</h1>
     </header>
     <main>
-        <button id="playButton">再生</button>
+        <button id="playButton">声で応援</button>
         <audio id="audioPlayer" src="yukichant.mp3"></audio>
-        <button id="bunPayButton" onclick="window.location.href='https://bun-pay-h4zvmysbc6tqvm7jau9fzn.streamlit.app/'">
-            F1ファンのための新通貨：Bun-Pay
+        <button id="moneySupportButton" onclick="window.location.href='https://bun-pay-h4zvmysbc6tqvm7jau9fzn.streamlit.app/'">
+            お金で応援
         </button>
     </main>
     <footer>
